--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,7 @@
 add_definitions(-DSTATICLIB)
 
 # Add external libraries as include dirs, so we can do #include "httplib" for example
-if (WITH_LEVELDB)
-  include_directories(${CMAKE_SOURCE_DIR}/external/leveldb/include)
-endif ()
+include_directories(${CMAKE_SOURCE_DIR}/external/leveldb/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/rocksdb/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/cpp-linenoise)
 include_directories(${CMAKE_SOURCE_DIR}/external/cpp-httplib)
@@ -24,13 +22,6 @@ file(GLOB_RECURSE Common common/*)
 file(GLOB_RECURSE Config config/*)
 file(GLOB_RECURSE Crypto crypto/*)
 file(GLOB_RECURSE CryptoNoteCore cryptonotecore/* CryptoNoteConfig.h)
-if (WITH_LEVELDB)
-  message(STATUS "WITH_LEVELDB: Remove: RocksDBWrapper")
-  list(FILTER CryptoNoteCore EXCLUDE REGEX ".*RocksDBWrapper.*$")
-else ()
-  message(STATUS "WITH_LEVELDB: Remove: LevelDBWrapper")
-  list(FILTER CryptoNoteCore EXCLUDE REGEX ".*LevelDBWrapper.*$")
-endif ()
 file(GLOB_RECURSE CryptoNoteProtocol cryptonoteprotocol/*)
 file(GLOB_RECURSE CryptoTest cryptotest/*)
 file(GLOB_RECURSE Errors errors/*)
@@ -144,17 +135,9 @@ elseif (UNIX)
 endif ()
 
 if (MSVC)
-  if (WITH_LEVELDB)
-    target_link_libraries(TurtleCoind System CryptoNoteCore leveldb snappy Errors ${Boost_LIBRARIES})
-  else ()
-    target_link_libraries(TurtleCoind System CryptoNoteCore rocksdb zstd lz4 Errors ${Boost_LIBRARIES})
-  endif ()
+    target_link_libraries(TurtleCoind System CryptoNoteCore rocksdb zstd lz4 leveldb snappy Errors ${Boost_LIBRARIES})
 else ()
-  if (WITH_LEVELDB)
-    target_link_libraries(TurtleCoind System CryptoNoteCore leveldblib snappy Errors ${Boost_LIBRARIES})
-  else ()
-    target_link_libraries(TurtleCoind System CryptoNoteCore rocksdblib zstd lz4 Errors ${Boost_LIBRARIES})
-  endif ()
+    target_link_libraries(TurtleCoind System CryptoNoteCore rocksdblib zstd lz4 leveldblib snappy Errors ${Boost_LIBRARIES})
 endif ()
 
 # Add the dependencies we need
