--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,6 @@ set(NO_AES OFF CACHE BOOL "Turn off Hardware AES instructions?")
 set(NO_OPTIMIZED_MULTIPLY_ON_ARM OFF CACHE BOOL "Turn off Optimized Multiplication on ARM?")
 
 ## This section defines a few parameters that we open up for use with RocksDB
-set(WITH_ZSTD ON CACHE STRING "Enable zstd compression")
 set(WITH_LZ4 ON CACHE STRING "Enable lz4 compression")
 
 message(STATUS "Building for target architecture: ${ARCH}")
@@ -88,10 +87,6 @@ if (NO_OPTIMIZED_MULTIPLY_ON_ARM)
     message(STATUS "OPTIMIZED_ARM_MULTIPLICATION: DISABLED")
 else ()
     message(STATUS "OPTIMIZED_ARM_MULTIPLICATION: ENABLED")
-endif ()
-
-if (WITH_ZSTD)
-    add_definitions(-DENABLE_ZSTD_COMPRESSION)
 endif ()
 
 # We need to set the label and import it into CMake if it exists
@@ -315,7 +310,7 @@ if (NOT MSVC)
     set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${PROJECT_BINARY_DIR}/leveldb/libleveldb.a")
 
     execute_process(
-        COMMAND ${CMAKE_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/external/rocksdb -DARCH=${ARCH} -DWITH_ZSTD=${WITH_ZSTD} -DWITH_LZ4=${WITH_LZ4} -DWITH_GFLAGS=0 -DCMAKE_BUILD_TYPE=MinSizeRel -DWITH_TESTS=OFF -DWITH_TOOLS=OFF -DPORTABLE=ON -B${PROJECT_BINARY_DIR}/rocksdb
+        COMMAND ${CMAKE_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/external/rocksdb -DARCH=${ARCH} -DWITH_ZSTD=ON -DWITH_LZ4=${WITH_LZ4} -DWITH_GFLAGS=0 -DCMAKE_BUILD_TYPE=MinSizeRel -DWITH_TESTS=OFF -DWITH_TOOLS=OFF -DPORTABLE=ON -B${PROJECT_BINARY_DIR}/rocksdb
     )
     set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${PROJECT_BINARY_DIR}/rocksdb/librocksdb.a")
 endif ()
